main头部 右部分完成

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
 <div class="banner604">
     <a href="#"></a>
 </div>
+
 <div class="w main clearfix">
     <div class="slider">
         <a href="#"><img src="images/slider1.jpg" alt=""></a>
@@ -200,10 +201,124 @@
         </div>
     </div>
     <div class="news">
+        <div class="jd-news">
+            <div class="dt">
+                <h3>京东快报</h3>
+                <a href="#">更多></a>
+            </div>
+            <div class="dd">
+                <ul>
+                    <li><a href="#"><span>[特惠]</span>1元秒杀</a></li>
+                    <li><a href="#"><span>[公告]</span>母婴类APP【京东宝宝】上线</a></li>
+                    <li><a href="#"><span>[特惠]</span>美的品牌日 APP嗨购大放“价”</a></li>
+                    <li><a href="#"><span>[公告]</span>京东深入蒙牛生产基地进行质检</a></li>
+                    <li><a href="#"><span>[特惠]</span>白条购家电 24期免息！</a></li>
+                </ul>
 
+            </div>
+        </div>
+        <div class="lifeservi">
+            <div class="dt">
+                <h3>生活服务</h3>
+            </div>
+            <div class="dd">
+                <ul>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <i></i>
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon2">
+                        <a href="#">
+                            <i></i>
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <i></i>
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#" class="song">
+                            <i></i>
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <i></i>
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <i></i>
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <i></i>
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <i></i>
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <i></i>
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <i></i>
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <i></i>
+                            <span>话费</span>
+                        </a>
+                    </li>
+                    <li class="lifeservi-icon1">
+                        <a href="#">
+                            <i></i>
+                            <span>话费</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 </div>
+
+<!--双11 的某个活动-->
+<div class="w todays clearfix">
+    <div class="night">
+        <div class="night-l fl">
+            <img src="images/night.jpg" alt=""/>
+        </div>
+        <div class="night-r">
+            <ul>
+                <li><a href="#"><img src="images/1.jpg" alt=""/></a></li>
+                <li><a href="#"><img src="images/2.jpg" alt=""/></a></li>
+                <li><a href="#"><img src="images/3.jpg" alt=""/></a></li>
+                <li><a href="#"><img src="images/4.jpg" alt=""/></a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
 <div class="jd-footer">
 <div class="service">
     <div class="slogan">
