main头部 右部分图片完善

--- a/index.html
+++ b/index.html
@@ -232,67 +232,67 @@
                     <li class="lifeservi-icon2">
                         <a href="#">
                             <i></i>
-                            <span>话费</span>
+                            <span>机票</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon1">
+                    <li class="lifeservi-icon3">
                         <a href="#">
                             <i></i>
-                            <span>话费</span>
+                            <span>电影票</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon1">
+                    <li class="lifeservi-icon4">
                         <a href="#" class="song">
                             <i></i>
-                            <span>话费</span>
+                            <span>游戏</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon1">
+                    <li class="lifeservi-icon5">
                         <a href="#">
                             <i></i>
-                            <span>话费</span>
+                            <span>彩票</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon1">
+                    <li class="lifeservi-icon6">
                         <a href="#">
                             <i></i>
-                            <span>话费</span>
+                            <span>酒店</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon1">
+                    <li class="lifeservi-icon7">
                         <a href="#">
                             <i></i>
-                            <span>话费</span>
+                            <span>团购</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon1">
+                    <li class="lifeservi-icon8">
                         <a href="#">
                             <i></i>
-                            <span>话费</span>
+                            <span>水电煤</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon1">
+                    <li class="lifeservi-icon9">
                         <a href="#">
                             <i></i>
-                            <span>话费</span>
+                            <span>众筹</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon1">
+                    <li class="lifeservi-icon10">
                         <a href="#">
                             <i></i>
-                            <span>话费</span>
+                            <span>理财</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon1">
+                    <li class="lifeservi-icon11">
                         <a href="#">
                             <i></i>
-                            <span>话费</span>
+                            <span>礼品卡</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon1">
+                    <li class="lifeservi-icon12">
                         <a href="#">
                             <i></i>
-                            <span>话费</span>
+                            <span>白条</span>
                         </a>
                     </li>
                 </ul>
@@ -305,6 +305,7 @@
 <!--双11 的某个活动-->
 <div class="w todays clearfix">
     <div class="night">
+        <!--fl的样式是左浮-->
         <div class="night-l fl">
             <img src="images/night.jpg" alt=""/>
         </div>
