遍历右侧小的背景图片

--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <link rel="stylesheet" href="css/Base.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="shortcut icon" href="favicon.ico">
+    <script type="text/javascript">
+        //模态框、弹出层的js部分
+        window.onload=function () {
+            var login = document.getElementById("login");
+            var mask = document.getElementById("mask");
+            var box = document.getElementById("box");
+            login.onclick = function () {
+                //当我们点击登录时，会弹出灰色的大盒子和白色的小盒子
+                mask.style.display = "block";
+                box.style.display = "block";
+            }
+            var close_all = document.getElementById("close_all");
+            close_all.onclick = function () {
+                mask.style.display = 'none';
+                box.style.display = 'none';
+            }
+        }
+    </script>
 </head>
 <body>
 <!--京东头部导航-->
@@ -18,7 +36,7 @@
         </div>
         <div class="fr">
             <ul>
-                <li><a href="#"> 你好,请登录</a>
+                <li><a href="#" id="login"> 你好,请登录</a>
                     <a href="#" class="col-red">免费注册</a>
                 </li>
                 <li class="line"></li>
@@ -54,13 +72,25 @@
     </div>
 </div>
 <!--京东头部导航结束-->
+<!--模态框、弹出层-->
+<div id="mask"></div>
+<div id="box">
+    <span id="close_all">✖</span>
+</div>
 <!--京东的topbanner部分-->
-<div class="topbanner">
+<div class="topbanner" id="topBanner">
     <div class="w tp">
         <img src="images/topbanner.jpg" alt=""/>
-        <a href="javascript:;" class="close-banner"></a>
+        <a href="javascript:;" class="close-banner" id="jd_close"></a>
     </div>
 </div>
+<script>
+    var jd_close=document.getElementById("jd_close");
+    var topBanner=document.getElementById("topBanner");
+    jd_close.onclick=function (){
+        topBanner.style.display="none";
+    }
+</script>
 <!--京东的topbanner部分 end-->
 <div class="w clearfix">
     <div class="logo">
@@ -221,7 +251,7 @@
             <div class="dt">
                 <h3>生活服务</h3>
             </div>
-            <div class="dd">
+            <div class="dd" id="iconsprite">
                 <ul>
                     <li class="lifeservi-icon1">
                         <a href="#">
@@ -229,79 +259,90 @@
                             <span>话费</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon2">
+                    <li class="lifeservi-icon1">
                         <a href="#">
                             <i></i>
                             <span>机票</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon3">
+                    <li class="lifeservi-icon1">
                         <a href="#">
                             <i></i>
                             <span>电影票</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon4">
+                    <li class="lifeservi-icon1">
                         <a href="#" class="song">
                             <i></i>
                             <span>游戏</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon5">
+                    <li class="lifeservi-icon1">
                         <a href="#">
                             <i></i>
                             <span>彩票</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon6">
+                    <li class="lifeservi-icon1">
                         <a href="#">
                             <i></i>
                             <span>酒店</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon7">
+                    <li class="lifeservi-icon1">
                         <a href="#">
                             <i></i>
                             <span>团购</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon8">
+                    <li class="lifeservi-icon1">
                         <a href="#">
                             <i></i>
                             <span>水电煤</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon9">
+                    <li class="lifeservi-icon1">
                         <a href="#">
                             <i></i>
                             <span>众筹</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon10">
+                    <li class="lifeservi-icon1">
                         <a href="#">
                             <i></i>
                             <span>理财</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon11">
+                    <li class="lifeservi-icon1">
                         <a href="#">
                             <i></i>
                             <span>礼品卡</span>
                         </a>
                     </li>
-                    <li class="lifeservi-icon12">
+                    <li class="lifeservi-icon1">
                         <a href="#">
                             <i></i>
                             <span>白条</span>
                         </a>
                     </li>
                 </ul>
+                <script>
+                    var lis=document.getElementById("iconsprite").getElementsByTagName("i");
+                    for(var i=0;i<lis.length;i++){
+                        // alert(lis.length);
+                        lis[i].style.backgroundPosition="-25px "+(-25*i)+"px";
+                    //    坐标x轴向右为负，y轴向下为负
+                    }
+
+                </script>
             </div>
         </div>
     </div>
 
 </div>
+<script>
 
+</script>
 <!--双11 的某个活动-->
 <div class="w todays clearfix">
     <div class="night">
