重构页面（未完成）

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>不是所有的页面都叫京东</title>
     <link rel="stylesheet" href="css/Base.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/sliderimg.css">
+    <link rel="stylesheet" href="css/tabslide.css">
     <link rel="shortcut icon" href="favicon.ico">
     <script type="text/javascript">
         //模态框、弹出层的js部分
@@ -13,7 +15,7 @@
             var mask = document.getElementById("mask");
             var box = document.getElementById("box");
             login.onclick = function () {
-                //当我们点击登录时，会弹出灰色的大盒子和白色的小盒子
+                //点击登录时，会弹出灰色的大盒子和白色的小盒子
                 mask.style.display = "block";
                 box.style.display = "block";
             }
@@ -28,7 +30,7 @@
 <body>
 <!--京东头部导航-->
 <div class="shortcut">
-    <div class="w">
+    <div class="w"> <!-- w版心控制左右边距-->
         <div class="fl">
             <div class="dt">送至：北京
                 <i><s>◇</s></i>
@@ -214,151 +216,109 @@
     <a href="#"></a>
 </div>
 
-<div class="w main clearfix">
-    <div class="slider">
-        <a href="#"><img src="images/slider1.jpg" alt=""></a>
-        <ul >
-            <li class="current">1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li>
-            <li>6</li>
-        </ul>
-        <div class="triangle">
-            <a href="javascript:;" class="tri-l"> <</a>
-            <a href="javascript:;" class="tri-r"> ></a>
-        </div>
+<div class="w main ">
+<div id="slide">
+    <div id="imglist" style="left: -590px">
+        <img src="images/slider7.jpg" alt="">
+        <img src="images/slider1.jpg" alt="">
+        <img src="images/slider2.jpg" alt="">
+        <img src="images/slider3.jpg" alt="">
+        <img src="images/slider4.jpg" alt="">
+        <img src="images/slider5.jpg" alt="">
+        <img src="images/slider6.jpg" alt="">
+        <img src="images/slider7.jpg" alt="">
+        <img src="images/slider1.jpg" alt="">
     </div>
-    <div class="news">
-        <div class="jd-news">
-            <div class="dt">
-                <h3>京东快报</h3>
-                <a href="#">更多></a>
-            </div>
-            <div class="dd">
-                <ul>
-                    <li><a href="#"><span>[特惠]</span>1元秒杀</a></li>
-                    <li><a href="#"><span>[公告]</span>母婴类APP【京东宝宝】上线</a></li>
-                    <li><a href="#"><span>[特惠]</span>美的品牌日 APP嗨购大放“价”</a></li>
-                    <li><a href="#"><span>[公告]</span>京东深入蒙牛生产基地进行质检</a></li>
-                    <li><a href="#"><span>[特惠]</span>白条购家电 24期免息！</a></li>
-                </ul>
-
-            </div>
-        </div>
-        <div class="lifeservi">
-            <div class="dt">
-                <h3>生活服务</h3>
-            </div>
-            <div class="dd" id="iconsprite">
-                <ul>
-                    <li class="lifeservi-icon1">
-                        <a href="#">
-                            <i></i>
-                            <span>话费</span>
-                        </a>
-                    </li>
-                    <li class="lifeservi-icon1">
-                        <a href="#">
-                            <i></i>
-                            <span>机票</span>
-                        </a>
-                    </li>
-                    <li class="lifeservi-icon1">
-                        <a href="#">
-                            <i></i>
-                            <span>电影票</span>
-                        </a>
-                    </li>
-                    <li class="lifeservi-icon1">
-                        <a href="#" class="song">
-                            <i></i>
-                            <span>游戏</span>
-                        </a>
-                    </li>
-                    <li class="lifeservi-icon1">
-                        <a href="#">
-                            <i></i>
-                            <span>彩票</span>
-                        </a>
-                    </li>
-                    <li class="lifeservi-icon1">
-                        <a href="#">
-                            <i></i>
-                            <span>酒店</span>
-                        </a>
-                    </li>
-                    <li class="lifeservi-icon1">
-                        <a href="#">
-                            <i></i>
-                            <span>团购</span>
-                        </a>
-                    </li>
-                    <li class="lifeservi-icon1">
-                        <a href="#">
-                            <i></i>
-                            <span>水电煤</span>
-                        </a>
-                    </li>
-                    <li class="lifeservi-icon1">
-                        <a href="#">
-                            <i></i>
-                            <span>众筹</span>
-                        </a>
-                    </li>
-                    <li class="lifeservi-icon1">
-                        <a href="#">
-                            <i></i>
-                            <span>理财</span>
-                        </a>
-                    </li>
-                    <li class="lifeservi-icon1">
-                        <a href="#">
-                            <i></i>
-                            <span>礼品卡</span>
-                        </a>
-                    </li>
-                    <li class="lifeservi-icon1">
-                        <a href="#">
-                            <i></i>
-                            <span>白条</span>
-                        </a>
-                    </li>
-                </ul>
-                <script>
-                    var lis=document.getElementById("iconsprite").getElementsByTagName("i");
-                    for(var i=0;i<lis.length;i++){
-                        // alert(lis.length);
-                        lis[i].style.backgroundPosition="-25px "+(-25*i)+"px";
-                    //    坐标x轴向右为负，y轴向下为负
-                    }
-
-                </script>
-            </div>
-        </div>
+    <a href="" id="pre" class="arrow">&lt;</a>
+    <a href="" id="next" class="arrow">&gt;</a>
+    <div id="circles">
+        <span class="on"></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
 
 </div>
-<script>
-
-</script>
-<!--双11 的某个活动-->
-<div class="w todays clearfix">
-    <div class="night">
-        <!--fl的样式是左浮-->
-        <div class="night-l fl">
-            <img src="images/night.jpg" alt=""/>
+    <div class="smallimg">
+        <img src="images/small1.jpg" alt="" style="width: 100%">
+        <img src="images/small2.jpg" alt="" style="width: 100%">
+        <img src="images/small3.jpg" alt="" style="width: 100%">
+    </div>
+    <div class="message">
+        <div style="text-align: center;height: 150px;">
+            <div class="no-login" style="width: 64px;height: 64px;" >
+                 <img src="images/no_login.jpg" alt="" style="border-radius: 50%;width: 100%">
+            </div>
+            <p>Hi,欢迎来到京东</p>
+            <a href="">登录</a>
+            <a href="">注册</a><br>
+            <button class="welcome" id="nav-login" style=" "><a href="">新人福利</a></button>
+            <button class="welcome" id="plus-vip" style=""><a href="">PLUS会员</a></button>
         </div>
-        <div class="night-r">
+        <div style="position: relative">
             <ul>
-                <li><a href="#"><img src="images/1.jpg" alt=""/></a></li>
-                <li><a href="#"><img src="images/2.jpg" alt=""/></a></li>
-                <li><a href="#"><img src="images/3.jpg" alt=""/></a></li>
-                <li><a href="#"><img src="images/4.jpg" alt=""/></a></li>
+                <li id="sale-tab" class="active" style="margin: 0 12px">
+                    <a href="">促销</a>
+                </li>
+                <li id="announcement-tab"><a href="">公告</a></li>
             </ul>
+            <a href="" style="position: absolute;top: 0px;left: 156px">更多</a>
+            <div class="sale" >
+                <a href="">精制家居部分2件7折</a>
+                <a href="">电脑数码 享白条免息</a>
+                <a href="">华为爆款直降</a>
+                <a href="">数码好物0元试用</a>
+            </div>
+            <div class="announcement" style="display: none">
+                <a href="">京东图书勋章体系改版公告</a>
+                <a href="">京东PLUS会员权益更新及会费调整</a>
+                <a href="">京东启用全新客服电话"950618"</a>
+                <a href="">关于召回普利斯通（天津）轮胎有限公司2个规格乘用车轮胎的公告</a>
+            </div>
+            <div class="seperate-line" style="border-bottom: 2px solid #f5f5f5;margin-left: 12px"></div>
+        </div>
+        <div class="lifeservice">
+            <div id="iconsprite">
+                <ul>
+                    <li><a href=""><span>话费</span></a></li>
+                    <li><a href=""><span>机票</span></a></li>
+                    <li><a href=""><span>酒店</span></a></li>
+                    <li><a href=""><span>游戏</span></a></li>
+                    <li><a href=""><span>酒店</span></a></li>
+                    <li><a href=""><span>酒店</span></a></li>
+                    <li><a href=""><span>酒店</span></a></li>
+                    <li><a href=""><span>酒店</span></a></li>
+                    <li><a href=""><span>酒店</span></a></li>
+                    <li><a href=""><span>酒店</span></a></li>
+                    <li><a href=""><span>酒店</span></a></li>
+                    <li><a href=""><span>酒店</span></a></li>
+                </ul>
+            </div>
+        </div>
+
+    </div>
+    <div class="second-kill clearfix"                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  >
+        <div class="killposter" style="width:190px;height: 278px;background-color: #C81623;float: left"></div>
+        <div style="width:190px;height: 278px ;float: left;background-color: #fff"><img src="images/kill1.webp" alt="" style="width: 100%;"></div>
+        <div style="width:190px;height: 278px ;float: left;background-color: #fff"><img src="images/kill2.webp" alt="" style="width: 100%;"></div>
+        <div style="width:190px;height: 278px ;float: left;background-color: #fff"><img src="images/kill3.webp" alt="" style="width: 100%;"></div>
+        <div style="width:190px;height: 278px ;float: left;background-color: #fff"><img src="images/kill4.webp" alt="" style="width: 100%;"></div>
+        <div id="kill-slide">
+            <div id="small-container" style="float: left">
+                <div style="width: 252px;height:278px "><img src="images/kill-slide2.jpg" alt="" style="width: 100%;"></div>
+                <!--<div><img src="images/kill-slide1.jpg" alt="" style="width: 100%;"></div>-->
+                <!--<div><img src="images/kill-slide2.jpg" alt="" style="width: 100%;"></div>-->
+                <!--<div><img src="images/kill-slide1.jpg" alt="" style="width: 100%;"></div>-->
+            </div>
+
         </div>
     </div>
+
+
+
 </div>
 
 <div class="jd-footer">
@@ -374,46 +334,42 @@
             <dt><a href="#">购物指南</a></dt>
             <dd><a href="#">购物流程</a></dd>
             <dd><a href="#">会员介绍</a></dd>
-            <dd><a href="#">生活旅行/团购</a></dd>
+            <dd><a href="#">生活旅行</a></dd>
             <dd><a href="#">常见问题</a></dd>
             <dd><a href="#">大家电</a></dd>
             <dd><a href="#">联系客服</a></dd>
         </dl>
         <dl>
-            <dt><a href="#">购物指南</a></dt>
-            <dd><a href="#">购物流程</a></dd>
-            <dd><a href="#">会员介绍</a></dd>
-            <dd><a href="#">生活旅行/团购</a></dd>
-            <dd><a href="#">常见问题</a></dd>
-            <dd><a href="#">大家电</a></dd>
-            <dd><a href="#">联系客服</a></dd>
+            <dt><a href="#">配送方式</a></dt>
+            <dd><a href="#">上门自提</a></dd>
+            <dd><a href="#">211限时达</a></dd>
+            <dd><a href="#">配送服务查询</a></dd>
+            <dd><a href="#">配送费收取标准</a></dd>
+            <dd><a href="#">海外配送</a></dd>
         </dl>
         <dl>
-            <dt><a href="#">购物指南</a></dt>
-            <dd><a href="#">购物流程</a></dd>
-            <dd><a href="#">会员介绍</a></dd>
-            <dd><a href="#">生活旅行/团购</a></dd>
-            <dd><a href="#">常见问题</a></dd>
-            <dd><a href="#">大家电</a></dd>
-            <dd><a href="#">联系客服</a></dd>
+            <dt><a href="#">支付方式</a></dt>
+            <dd><a href="#">货到付款</a></dd>
+            <dd><a href="#">在线支付</a></dd>
+            <dd><a href="#">分期付款</a></dd>
+            <dd><a href="#">邮局汇款</a></dd>
+            <dd><a href="#">公司转账</a></dd>
         </dl>
         <dl>
-            <dt><a href="#">购物指南</a></dt>
-            <dd><a href="#">购物流程</a></dd>
-            <dd><a href="#">会员介绍</a></dd>
-            <dd><a href="#">生活旅行/团购</a></dd>
-            <dd><a href="#">常见问题</a></dd>
-            <dd><a href="#">大家电</a></dd>
-            <dd><a href="#">联系客服</a></dd>
+            <dt><a href="#">售后服务</a></dt>
+            <dd><a href="#">售后政策</a></dd>
+            <dd><a href="#">价格保护</a></dd>
+            <dd><a href="#">退款说明</a></dd>
+            <dd><a href="#">返修/退换货</a></dd>
+            <dd><a href="#">取消订单</a></dd>
         </dl>
         <dl>
-            <dt><a href="#">购物指南</a></dt>
-            <dd><a href="#">购物流程</a></dd>
-            <dd><a href="#">会员介绍</a></dd>
-            <dd><a href="#">生活旅行/团购</a></dd>
-            <dd><a href="#">常见问题</a></dd>
-            <dd><a href="#">大家电</a></dd>
-            <dd><a href="#">联系客服</a></dd>
+            <dt><a href="#">特色服务</a></dt>
+            <dd><a href="#">夺宝岛</a></dd>
+            <dd><a href="#">DIY装机</a></dd>
+            <dd><a href="#">京东E卡</a></dd>
+            <dd><a href="#">京东通信</a></dd>
+            <dd><a href="#">京东JD+</a></dd>
         </dl>
         <div class="courage">
             <div class="dt">京东自营覆盖区县</div>
@@ -427,18 +383,18 @@
 </div>
     <div class="w againw">
         <div class="links">
-            <a href="#">关于我们</a>|
-            <a href="#">联系我们</a>|
-            <a href="#">商家入驻</a>|
-            <a href="#">营销中心</a>|
-            <a href="#">手机京东</a>|
-            <a href="#">友情链接</a>|
-            <a href="#">销售联盟</a>|
-            <a href="#">京东社区</a>|
-            <a href="#">京东公益</a>|
-            <a href="#">English Site</a>|
-            <a href="#">Contact Us</a>
-        </div>
+        <a href="#">关于我们</a>|
+        <a href="#">联系我们</a>|
+        <a href="#">商家入驻</a>|
+        <a href="#">营销中心</a>|
+        <a href="#">手机京东</a>|
+        <a href="#">友情链接</a>|
+        <a href="#">销售联盟</a>|
+        <a href="#">京东社区</a>|
+        <a href="#">京东公益</a>|
+        <a href="#">English Site</a>|
+        <a href="#">Contact Us</a>
+    </div>
         <div class="copyright">
             北京市公安局朝阳分局备案编号110105014669  |  京ICP证070359号  |  互联网药品信息服务资格证编号(京)-经营性-2014-0008  |  新出发京零 字第大120007号<br />
             音像制品经营许可证苏宿批005号  |  出版物经营许可证编号新出发(苏)批字第N-012号  |  互联网出版许可证编号新出网证(京)字150号<br />
@@ -447,17 +403,9 @@
         </div>
 </div>
 </div>
+
+<script src="js/slideimg.js"></script>
+<script src="js/tabslide.js"></script>
 </body>
 </html>
-<!--
-/*
 
-
-<div class="message">
-    <a href="#"><img src="images/mess.png" alt=""/></a>
-    <a href="#"><img src="images/mess2.png" alt=""/></a>
-    <a href="#"><img src="images/mess3.png" alt=""/></a>
-    <a href="#"><img src="images/mess4.png" alt=""/></a>
-    <a href="#"><img src="images/mess5.png" alt=""/></a>
-</div>
-</div>*/-->
